# OpenGlES_Demo

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
es2_0_native/: CMakeLists.txt  build.gradle
es2_0_native/src/androidTest/java/com/ycl/es2_0_native/: ExampleInstrumentedTest.java
es2_0_native/src/main/: AndroidManifest.xml
es2_0_native/src/main/cpp/: native-lib.cpp
es2_0_native/src/main/cpp/egl/: EGLHelper.cpp  EGLHelper.h  EGLThread.cpp  EGLThread.h
es2_0_native/src/main/cpp/log/: AndroidLog.h
es2_0_native/src/main/cpp/matrix/: MatrixUtil.h
es2_0_native/src/main/cpp/opengl/: BaseOpengl.cpp  BaseOpengl.h  FilterOne.cpp  FilterOne.h  FilterTwo.cpp  FilterTwo.h  FilterYUV.cpp  FilterYUV.h  Opengl.cpp  Opengl.h
es2_0_native/src/main/cpp/shaderutils/: ShaderUtil.h
es2_0_native/src/main/java/com/ycl/es2_0_native/: NativeActivity.java  YUVActivity.java
es2_0_native/src/main/java/com/ycl/es2_0_native/opengl/: MySurfaceView.java  NativeOpengl.java
es2_0_native/src/main/java/com/ycl/es2_0_native/utils/: PermissionUtils.java
es2_0_native/src/main/res/layout/: activity_native.xml  activity_native_main.xml  activity_native_yuv.xml  activity_yuv.xml
es2_0_native/src/main/res/values/: strings.xml
es2_0_native/src/test/java/com/ycl/es2_0_native/: ExampleUnitTest.java
es2_0_test2/: CMakeLists.txt  build.gradle
es2_0_test2/src/androidTest/java/com/opengles/book/es2_0_test2/: ExampleInstrumentedTest.java
es2_0_test2/src/main/: AndroidManifest.xml
es2_0_test2/src/main/cpp/: AndroidLog.h  CallJava.cpp  CallJava.h  Push.cpp  Queue.cpp  Queue.h  RtmpPush.cpp  RtmpPush.h  native-lib.cpp
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/: ES2p0_test2_MainActivity.kt
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/camera/: Camera.java  CameraActivity.java  CameraSurfaceView.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/camera/render/: CameraRender.java  CameraTextureRender.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/egl/: EGLActivity.java  EglHelper.java  EglSurfaceView.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/eglUtils/: EglHelper.java  EglSurfaceView.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/encodec/: BaseMediaEncoder.java  EncodecActivity.java  MediaEncodec.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/encodec/render/: EncodecRender.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/image_video/: ImgVideoActivity.java  ImgVideoRender.java  ImgVideoSurfaceView.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/main/: MenuAdapter.java  MenuBean.kt
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/muti/: MutiActivity.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/muti/surface/: MyGLSurfaceView.java  MyRender.java  MyTextureRender.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/muti/surface2/: MutiRender.java  MutiSurfaceView.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/push/: AudioRecordUtil.java  PushActivity.java  PushConnectListener.java  PushVideo.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/push/codec/: BasePushEncoder.java  PushEncodec.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/push/render/: PushRender.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/surfaceview/: SurfaceViewActivity.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/utils/: BufferUtils.java  DisplayUtil.java  DrawUtils.java  EasyGlUtils.java  EglHelper.java  EglSurfaceView.java  MatrixUtils.java  PermissionUtils.java  ShaderUtils.java  TextureUtils.java
es2_0_test2/src/main/java/com/opengles/book/es2_0_test2/yuv/: YuvActivity.java  YuvRender.java  YuvSurfaceView.java
es2_0_test2/src/main/res/layout/: activity_camera.xml  activity_encodec.xml  activity_image_video.xml  activity_muti.xml  activity_push.xml  activity_yuv.xml  item_button.xml
es2_0_test2/src/main/res/raw/: fragment_shader1.glsl  fragment_shader2.glsl  fragment_shader3.glsl
es2_0_test2/src/main/res/values/: strings.xml  styles.xml
es2_0_test2/src/test/java/com/opengles/book/es2_0_test2/: ExampleUnitTest.java
source/: 目录笔记.txt  (+2 more)
(+279 files in other folders)
